# Night-Day-Toggle

./: .gitignore  LICENSE  LICENSE_ORIGIN.txt  README.md  package-lock.json  package.json
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
