[package]
name = "night-day-toggle"
version = "0.1.0"
description = "日间/黑夜模式切换悬浮球"
authors = ["Misaka-xxw"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Windows特定依赖
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.50"
winapi = { version = "0.3", features = ["winuser"] } 

# macOS特定依赖
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
